SFDCProject/src/objects/Help__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <description>Knowledge base object which is used to stored all help</description>
    <fields>
        <fullName>Help_Content__c</fullName>
        <inlineHelpText>This is the help applicable to this article.</inlineHelpText>
        <label>Help Content</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Section__c</fullName>
        <inlineHelpText>This is the section of the page to which the help belongs to.</inlineHelpText>
        <label>Section</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target__c</fullName>
        <inlineHelpText>This is the Target page to which the help associated with. The value of this field should match (including the extension) what is specified by Salesforce in various places. For ex., for Accounts record page, the target is &quot;account_edit.htm&quot;</inlineHelpText>
        <label>Target</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Help</label>
    <pluralLabel>Help</pluralLabel>
</CustomObject>